<resources>
    <string name="app_name">Funing 芬寧</string>
    <string name="empty_listview">Oops, cannot connect to the server, please refresh later.</string>
    <string name="empty">Oops, there is nothing.</string>
    <string name="empty_shopping_cart">Your Basket is empty.</string>
    <string name="hk">Hong Kong</string>
    <string name="illegal_input">Please fill the required information correctly.</string>
   
    <string name="id_hint">User Id</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="verify_pw_hint">VERIFY PASSWORD</string>
    <string name="name_hint">NAME</string>
    <string name="address_hint">ADDRESS</string>
    <string name="phone_hint">PHONE</string>
    <string name="phone_hint2">Phone number (mobile) :</string>
    <string name="phone_hint_hk"> +852 </string>
    
    <string name="login_f">Login</string>
    <string name="logout">Logout</string>
    <string name="user_info_f">My account</string>
    <string name="is_user">I am already a user</string>
    <string name="not_user">New customer</string>
    <string name="login_first">Please Login First</string>
    <string name="num_input">Please input numbers.</string>
    
    <string name="processing">Processing ...</string>
    <string name="fail">Request fail ...</string>
    <string name="success">Request success.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cansel</string>
    
    <string name="coupon_f">My Coupons</string>
    <string name="valid_cp">Valid Coupon</string>
    <string name="not_valid_cp">Used/expired</string>
    <string name="expiry_date">Expiry Date: </string>
    
    <string name="product_a">Product Detail</string>
    <string name="product_f">Product List</string>
    <string name="pd_detail">Details: </string>
    <string name="pd_quantity">Quantity: </string>
    
    <string name="sc_amount">Amount: HK$ </string>
    <string name="shopping_cart_f">Basket</string>
    <string name="decrease_quantity">Please click the delete button to drop the product.</string>

    <string name="order_history_f">Order List</string>
    <string name="order_activity">Order Confirmation</string>
    <string name="order_shipping">Shipping Information</string>
    <string name="shipping_name">Contact person: </string>
    <string name="shipping_phone">Contact No.: </string>
    <string name="shipping_email">Contact email: </string>
    <string name="shipping_address">Address: </string>
    <string name="order_coupon">Coupons Information</string>
    <string name="coupon_select">Select a Coupon ... </string>
    <string name="order_products">Products Information</string>
    <string name="order_ready">Ready to Order</string>
    <string name="order_total">Total Amount: </string>
    <string name="order_actual">Actual Amount: </string>
    <string name="order_confirm">Confirm</string>


</resources>
