<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/login_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_xxl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTER"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_tab"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_xxl"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/r_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/mail4"
            android:gravity="center"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/r_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/user"
            android:gravity="center"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/lock"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:password="true" />

        <EditText
            android:id="@+id/r_r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/lock"
            android:gravity="center"
            android:hint="@string/verify_pw_hint"
            android:password="true" />

        <EditText
            android:id="@+id/r_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/phone"
            android:gravity="center"
            android:hint="@string/phone_hint" />
        <EditText
            android:id="@+id/r_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/pacman"
            android:gravity="center"
            android:hint="@string/address_hint" />

        <Button
            android:id="@+id/r_submit"
            android:layout_marginTop="@dimen/margin_xl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />
    </LinearLayout>
</RelativeLayout>