<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        android:padding="@dimen/margin_s">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rectangle_code"
            android:orientation="vertical"
            android:padding="@dimen/margin_s">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                android:background="@drawable/rectangle_code"
                android:text="@string/order_products"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ListView
                android:id="@+id/order_product_list"
                android:background="@drawable/rectangle_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:background="@drawable/white_rectangle_code"
            android:orientation="vertical"
            android:padding="@dimen/margin_s">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                android:background="@drawable/rectangle_code"
                android:text="@string/order_coupon"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <include
                android:id="@+id/coupon_dis"
                layout="@layout/coupon_list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <Button
                android:id="@+id/select_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_select" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:background="@drawable/white_rectangle_code"
            android:orientation="vertical"
            android:padding="@dimen/margin_s">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                android:background="@drawable/rectangle_code"
                android:text="@string/order_shipping"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_name"
                android:textAppearance="?android:attr/textAppearanceMedium"

                />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_phone"
                android:textAppearance="?android:attr/textAppearanceMedium"

                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:background="@drawable/white_rectangle_code"
            android:orientation="vertical"
            android:padding="@dimen/margin_s">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_l"
                android:background="@drawable/rectangle_code"
                android:text="@string/order_ready"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_m"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_total"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="$--" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_m"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_actual"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/actual_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="$--"
                    android:textColor="@color/red" />
            </LinearLayout>

            <ImageView
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_xl"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/add_to_cart" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>