<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_xxl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/margin_xxl" 
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/login_tab"
        android:layout_margin="@dimen/margin_l"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_user"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/login_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m"
            android:drawableLeft="@mipmap/mail4"

            android:gravity="center"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m"
            android:drawableLeft="@mipmap/key"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:password="true" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            android:text="@string/not_user"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register" />


    </LinearLayout>


</RelativeLayout>
